--- a/2.Web/lecture/html/01_markup.html
+++ b/2.Web/lecture/html/01_markup.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <header>
+        <!-- src:img의 위치 / alt=img가 없을 때 출력-->
         <img src="ssafy.png" alt="싸피 이미지" width="400px">
         <h1>SSAFY 4기 학생 건강 설문</h1>
     </header>
@@ -14,13 +15,16 @@
             <input type="text" name="query">
 
             <div>
+                <!--for값에 id값을 지정해주면 라벨이 해당 input을 가리킨다.-->
                 <label for="name">이름을 기재해주세요.</label><br>
-                <input id="name" autofocus>
+                <input id="name" autofocus> <!--autofucus 자동으로 커서가 깜빡깜빡-->
             </div>
             
             <div>
+                <!--name과 value는 제출했을 때, name=value로 서버로 넘겨진다.-->
                 <label for="region">지역을 선택해주세요.</label><br>
                 <select name="region" id="region">
+                    <!--disabled 선택할 수 없게 한다.-->
                     <option value="" disabled selected hidden>선택</option>
                     <option value="서울">서울</option>
                     <option value="대전">대전</option>
@@ -30,6 +34,7 @@
             </div>
 
             <div>
+                <!--radio는 하나만 선택할 수 있다.-->
                 <p>오늘의 체온을 선택해주세요.</p>
                 <input type="radio" name="body-heat" id="normal" value="normal">
                 <label for="normal">37도 미만</label>
@@ -43,15 +48,13 @@
                 <input type="checkbox" name="leaders" value="choose-b">강채원
                 <input type="checkbox" name="leaders" value="choose-c">한승엽
             </div>
-
+            
+            <!--값을 서버로 전송한다.-->
             <input type="submit" value="제출하기">
-
         </form>
     </section>
     <footer>
         Google 설문지를 통해 비밀번호를 제출하지 마시오.
     </footer>
-
 </body>
-
 </html>
